2.87 (unreleased)
-----------------

- Nothing changed yet.


2.86 (2018-11-18)
-----------------

- Don't register stdin with epoll.


2.85 (2018-11-18)
-----------------

- Add ability to specify port through environmental variable SCS_PORT.


2.84 (2018-11-17)
-----------------

- Add celery sqs plugin to dependencies.
- Update geotool and geotool-db dependencies to remove pycrypto references.


2.83 (2018-10-21)
-----------------

- Bump version of meitrack lib to bring in unit tested functionality.


2.82 (2018-10-14)
-----------------

- Don't add files reported by event 39 to the list of files that we need to download. Files are automatically sent to the head end.
- Increase file fragment timeout to 120s as it was sometimes getting triggered for a file that the device was still sending. Was 60s.
- Allow sending of empty license commands to reset the value back to the default of any license type. Previously empty values were ignored so we could not set C50 back to empty.


2.81 (2018-10-14)
-----------------

- Split geotool config to meitrack gprs messages out into separate file.
- Add ability to parse the camera configuration parameters from the geotool config object.


2.80 (2018-10-14)
-----------------

- Refactor all asynchronous loops into new mqrecv_lib library.
- Move gps, cell and debug processing into mqrecv-event to reduce number of required db connections.
- Bump version of meitrack lib to bring in B46 command for setting of camera snapshot parameters.
- Add ability to trigger B46 command from the meitrack chat client.
- Add scs command protocol for setting of camera parameters.
- Add celery commands to set camera snapshot parameters.

2.79 (2018-09-16)
-----------------

- Remove firmware binary parsing logic from the meitrack chat client now that it is in the meitrack firmware client class.
- Bump meitrack parser library to stop library from printing byte parameters to stdout.


2.78 (2018-09-02)
-----------------
