@@ -34,8 +34,8 @@ setup(
             "python-memcached",
             'pika',
             'aio_pika',
-            'geotooldbapi>=2.1',
-            'geotoolapi>=1.23',
+            'geotooldbapi>=2.3',
+            'geotoolapi>=2.1',
             'meitrackparser>=2.3',
             'celery[sqs]',
             'kombu',
